# pico-icm20948

./: .gitignore  CMakeLists.txt  README.md  icm20948-register.h  pico-icm20948.c  test.c  test_fusion.c
MadgwickAHRS/: CMakeLists.txt  MadgwickAHRS.c  MadgwickAHRS.h
examples/: CMakeLists.txt  check_who_am_i.c  read_raw.c
examples/ex1_read_raw/: CMakeLists.txt  ex1_read_raw.c
examples/ex2_madgwick/: CMakeLists.txt  ex2_madgwick.c
src/: CMakeLists.txt  icm20948-register.h  pico-icm20948.c  pico-icm20948.h
